# android-ndk

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: icon_set_focus.json  loading.json
app/src/main/assets/area/: china_area.json
app/src/main/jni/: Android.mk  Common.cpp  Common.h  myNDK.c  test_zml_com_myndk_AbstractPlayerActivity.cpp  test_zml_com_myndk_AbstractPlayerActivity.h  test_zml_com_myndk_BitmapPlayerActivity.cpp  test_zml_com_myndk_BitmapPlayerActivity.h  test_zml_com_myndk_JNITest.h  test_zml_com_myndk_OpenGLPlayerActivity.cpp  test_zml_com_myndk_OpenGLPlayerActivity.h
app/src/main/jni/source/transcode/: ChangeLog  INSTALL  Makefile.in  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
app/src/main/jni/source/transcode/aclib/: Makefile.in
app/src/main/jni/source/transcode/avilib/: Android.mk  platform.h
app/src/main/jni/source/transcode/docs/: Makefile.am  Makefile.in  RELNOTES-1.1.0  filter-socket.txt
app/src/main/jni/source/transcode/docs/tech/: Makefile.am  Makefile.in  filter_template.c  libraries.txt
app/src/main/jni/source/transcode/docs/tech/html/: Makefile.am  Makefile.in  index.html  tc_basic.css  tc_libraries.html
app/src/main/jni/source/transcode/encode/: Makefile.am  Makefile.in  encode_copy.c  encode_lavc.c  encode_lzo.c  encode_null.c  encode_x264.c  encode_xvid.c  x264.cfg
app/src/main/jni/source/transcode/export/: Makefile.am  Makefile.in  aud_aux.c  aud_aux.h  export_ac3.c  export_ffmpeg.c  export_im.c  export_jpg.c  export_lzo.c  export_mov.c  export_mp2.c  export_pvn.c  export_tcaud.c  export_toolame.c  ffmpeg_cfg.c  ffmpeg_cfg.h  xvid4.h
app/src/main/jni/source/transcode/filter/: Makefile.am  Makefile.in  filter_detectclipping.c  filter_dnr.c  filter_facemask.c  filter_fields.c  filter_invert.c  filter_levels.c  filter_logo.c  filter_logoaway.c  filter_lowpass.c  filter_msharpen.c  filter_pp.c  filter_resample.c  filter_text.c  filter_xsharpen.c  filter_yait.c
app/src/main/jni/source/transcode/filter/stabilize/: Changelog  Makefile.am  Makefile.in  filter_stabilize.c  filter_transform.c  transform.c
app/src/main/jni/source/transcode/import/: Makefile.am  Makefile.in  decode_dv.c  decode_lavc.c  decode_lzo.c  decode_mpeg2.c  demux_pass.c  demuxer.h  extract_avi.c  extract_lzo.c  fileinfo.c  import_alsa.c  import_bktr.c  import_ffmpeg.c  import_imlist.c  import_lzo.c  import_mov.c  import_ogg.c  import_pvn.c  import_raw.c  import_x11.c  import_xml.c  magic.h  probe_ffmpeg.c  probe_mplayer.c  probe_stream.c  probe_wav.c  probe_x11.c  tc.h  tccat.c  tcdecode.c  tcdemux.c  tcextract.c  tcprobe.c  tcscan.c  tcxmlcheck.c  x11source.c  x11source.h
app/src/main/jni/source/transcode/libdldarwin/: Makefile.in
app/src/main/jni/source/transcode/libtc/: Makefile.am  Makefile.in
app/src/main/jni/source/transcode/libtcaudio/: Makefile.in
app/src/main/jni/source/transcode/libtcvideo/: Makefile.in  zoom.c
app/src/main/jni/source/transcode/multiplex/: Makefile.am  Makefile.in  multiplex_avi.c  multiplex_null.c  multiplex_raw.c  multiplex_y4m.c
app/src/main/jni/source/transcode/pvm3/: Makefile.in  pvm_parser.c
app/src/main/jni/source/transcode/src/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  cmdline_def.h  counter.c  decoder.c  decoder.h  encoder-common.c  encoder.c  export_profile.c  export_profile.h  framebuffer.c  framebuffer.h  probe.c  socket.c  tc_defaults.h  transcode.c  transcode.h
app/src/main/jni/source/transcode/testsuite/: Makefile.am  Makefile.in  test-bufalloc.c  test-cfg-filelist.c  test-cfg-filelist.sh  test-export-profile.c  test-framealloc.c  test-iodir.c  test-pvmparser.c  test-ratiocodes.c  test-resize-values.c  test-tcglob.c  test-tclist.c  test-tclog.c  test-tcmodule.c  test-tcmoduleinfo.c  test-tcstrdup.c
app/src/main/jni/source/transcode/tools/: Makefile.am  Makefile.in  avifix.c  aviindex.c  avimerge.c  avisplit.c  avisync.c  rawsource.c  rawsource.h  tcexport.c  tcmodchain.c  (+4 more)
app/src/main/res/layout/: activity_bitmap_player.xml  activity_main.xml  activity_open_gl_player.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
