# # Process this file with automake to produce Makefile.in.

EXTRA_DIST = \
	$(docs_DATA)

SUBDIRS = html

docsdir = $(datadir)/doc/transcode/tech

docs_DATA = \
	OPTIMIZERS \
	architecture.txt \
	avi_comments.txt \
	clone.txt \
	export-API.txt \
	filter-API.txt \
	ibp_support.txt \
	import-API.txt \
	libraries.txt \
	module-system-API.txt \
	filter_template.c

